[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Oxanium-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Interfaces/Saveshrine.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mouse_default_cursor_shape = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
margin_right = 1025.0
margin_bottom = 603.0
color = Color( 0, 0, 0, 0.156863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PauseOverlay"]
margin_left = 243.451
margin_top = 169.056
margin_right = 834.451
margin_bottom = 198.056
custom_fonts/font = SubResource( 1 )
text = "Use Shrine to Save Game and Reset Enemies?"

[node name="Yes" type="Button" parent="PauseOverlay"]
margin_left = 64.0
margin_top = 432.0
margin_right = 393.0
margin_bottom = 499.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="PauseOverlay"]
margin_left = 632.0
margin_top = 424.0
margin_right = 961.0
margin_bottom = 491.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="PauseOverlay/Yes" to="." method="_on_Yes_button_up"]
[connection signal="button_up" from="PauseOverlay/No" to="." method="_on_No_button_up"]
